--- a/app/src/main/res/layout/main_viewpager.xml
+++ b/app/src/main/res/layout/main_viewpager.xml
@@ -70,7 +70,8 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@android:color/white"
+
+                        android:textColor="@color/primayDark"
                         android:text="@string/work"
                         />
                     <TextView
