--- a/app/src/main/res/layout/fragment_alumni_voice_item.xml
+++ b/app/src/main/res/layout/fragment_alumni_voice_item.xml
@@ -3,12 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.nju.fragment.AlumniVoiceItemFragment">
-    <ListView
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:paddingTop="@dimen/phone_apadding"
-        android:paddingStart="@dimen/phone_apadding"
-        android:paddingEnd="@dimen/phone_apadding"
-        android:id="@+id/alumni_voice_item_list"
-        android:layout_height="match_parent"/>
-
+        android:layout_height="match_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:paddingTop="@dimen/phone_apadding"
+            android:paddingStart="@dimen/phone_apadding"
+            android:paddingEnd="@dimen/phone_apadding"
+            android:id="@+id/alumni_voice_item_list"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
