--- a/app/src/main/res/layout/fragment_major_ask.xml
+++ b/app/src/main/res/layout/fragment_major_ask.xml
@@ -3,8 +3,17 @@
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.nju.fragment.MajorAskFragment">
-    <ListView
-        android:id="@+id/listView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/listView"
+            android:paddingStart="@dimen/phone_apadding"
+            android:paddingEnd="@dimen/phone_apadding"
+            android:paddingTop="@dimen/phone_apadding"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
