--- a/app/src/main/res/layout/fragment_recommend_work_item.xml
+++ b/app/src/main/res/layout/fragment_recommend_work_item.xml
@@ -1,13 +1,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.nju.fragment.RecommendWorkItem">
-
-    <ListView
-        android:id="@+id/fragment_recommend_work_item_listview"
-        android:paddingTop="@dimen/phone_apadding"
-        android:paddingStart="@dimen/phone_apadding"
-        android:paddingEnd="@dimen/phone_apadding"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/fragment_recommend_work_item_listview"
+            android:paddingTop="@dimen/phone_apadding"
+            android:paddingStart="@dimen/phone_apadding"
+            android:paddingEnd="@dimen/phone_apadding"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
