--- a/app/src/main/res/layout/main_viewpager.xml
+++ b/app/src/main/res/layout/main_viewpager.xml
@@ -65,16 +65,17 @@
                     android:orientation="horizontal"
                     >
                     <TextView
+                        android:id="@+id/voice_label1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:textStyle="bold"
-
-                        android:textColor="@color/primayDark"
+                        android:textColor="@android:color/holo_red_dark"
                         android:text="@string/work"
                         />
                     <TextView
+                        android:id="@+id/voice_label2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -84,6 +85,7 @@
                         android:text="@string/learing"
                         />
                     <TextView
+                        android:id="@+id/voice_label3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -93,6 +95,7 @@
                         android:text="@string/find_job"
                         />
                     <TextView
+                        android:id="@+id/voice_label4"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -102,6 +105,7 @@
                         android:text="@string/shixi"
                         />
                     <TextView
+                        android:id="@+id/voice_label5"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -123,15 +127,17 @@
                     android:orientation="horizontal"
                     >
                     <TextView
+                        android:id="@+id/rec_label1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:textStyle="bold"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/holo_red_dark"
                         android:text="@string/shixi"
                         />
                     <TextView
+                        android:id="@+id/rec_label2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -141,6 +147,7 @@
                         android:text="@string/xiaozhao"
                         />
                     <TextView
+                        android:id="@+id/rec_label3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -158,7 +165,6 @@
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             />
     </android.support.design.widget.CoordinatorLayout>
 
