--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,12 +1,127 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/light_gray"
     android:layout_height="match_parent" tools:context="com.nju.fragment.SettingFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent"
-        android:id="@+id/text"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_marginTop="@dimen/padding_left"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingLeft="@dimen/padding_left"
+        android:background="@android:color/white"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/function_desc"
+        android:id="@+id/textView32" />
+        <View
+            android:layout_width="match_parent"
+            android:paddingTop="1dp"
+            android:layout_marginStart="@dimen/phone_apadding"
+            android:layout_marginEnd="@dimen/phone_apadding"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/sys_notice"
+             />
+        <View
+            android:layout_width="match_parent"
+            android:paddingTop="1dp"
+            android:layout_marginStart="@dimen/phone_apadding"
+            android:layout_marginEnd="@dimen/phone_apadding"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/help_fellback"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:paddingTop="1dp"
+            android:layout_marginStart="@dimen/phone_apadding"
+            android:layout_marginEnd="@dimen/phone_apadding"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/jubao_tousu"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:paddingTop="1dp"
+            android:layout_marginStart="@dimen/phone_apadding"
+            android:layout_marginEnd="@dimen/phone_apadding"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/check_new_version"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/padding_left"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/clean_storage"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/padding_left"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:paddingLeft="@dimen/padding_left"
+            android:background="@android:color/white"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/exit_alumni"
+            />
+
+    </LinearLayout>
 
 </FrameLayout>
